Moved default formulas apart.

--- a/index.html
+++ b/index.html
@@ -230,6 +230,7 @@
     <script src="/common/js/browser_storage.js"></script>
 
     <script src="/pjs/adaptor.js"></script>
+    <script src="/pjs/default_formula.js"></script>
     <script src="/pjs/app.js"></script>
 
     <noscript>Please enable JavaScript for MathVue to work.</noscript>
