--- a/wasm/index.html
+++ b/wasm/index.html
@@ -191,6 +191,8 @@
     <script src="/common/js/browser_storage.js"></script>
     <script src="/common/js/component_statusdialog.js"></script>
     <script src="/common/js/component_editor.js"></script>
+
+    <script src="/wasm/default_formula.js"></script>
     <script src="/wasm/app.js"></script>
   </body>
 </html>
