Thumbnails now has .png appended, not replacing ending.

--- a/wasm/index.html
+++ b/wasm/index.html
@@ -24,9 +24,12 @@
     </a>
 
     <h1>MathVue Webassembly</h1>
+    <small>
+      With Bootstrap v4, Vue.js v2.5, Node.js v8,
+      WebAssembly (Wasm), Enscripten (emcc).
+    </small>
 
     <div id="app">
-      With Bootstrap v4, Vue.js v2.5, Node.js v8, WebAssembly (Wasm), Enscripten (emcc).
 
       <!-- Formula -->
       <div class="row">
@@ -65,7 +68,7 @@
           <h2>Canvas</h2>
           <div style="display: inline-block">
 	    <canvas id="canvas" width="500" height="300"
-                    style="border: 1px solid lightgrey; max-width:100%">
+		    style="max-width:100%; background-color: #000;">
             </canvas>
             <br/>
 
