Add link to the Webassembly version.

--- a/index.html
+++ b/index.html
@@ -27,11 +27,14 @@
     </a>
 
     <h1>MathVue</h1>
+    This is the Processing.js version.
+    <a href="/webassembly">Go to the Webassembly version.</a><br/>
+    <small class="text-muted">
+      With Bootstrap v4, Vue.js v2.5, Processing v1.4, Node.js v8.
+    </small>
 
     <!-- Our Vue template -->
     <div id="app">
-      With Bootstrap v4, Vue.js v2.5, Processing v1.4, Node.js v8.
-
       <!-- Formula -->
       <div class="row">
         <div class="col-md-6 pt-3">
