In URL query, can ask for formula sample.

--- a/wasm/index.html
+++ b/wasm/index.html
@@ -86,7 +86,7 @@
             <br/>
 
 	    <!-- Controls -->
-	    <table width="100%">
+	    <table v-if="compiled" width="100%">
 	      <tr valign="top" style="line-height: 1">
 		<td class="canvas-controls" width="1">
 		  <!-- Play/pause -->
