--- a/wasm/index.html
+++ b/wasm/index.html
@@ -113,7 +113,7 @@
 		<td class="canvas-controls">
 		  <!-- - button -->
 		  <button v-on:click="toggleRecording"
-			  :disabled="!wImg || error"
+			  :disabled="!compiled || error"
 			  :title="capturer ? 'Stop recording': 'Start recording'"
 			  type="button"
 			  class="btn btn-outline-secondary btn-sm font-60 py-0 px-1">
