--- a/pjs/index.html
+++ b/pjs/index.html
@@ -13,11 +13,10 @@
     <script defer src="https://use.fontawesome.com/releases/v5.0.2/js/all.js"></script>
 
     <link rel="stylesheet" href="/common/css/style.css">
-
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
   </head>
 
-  <body class="p-md-3 p-1 mr-3 mr-md-0">
+  <body class="p-md-3 p-4 mr-3 mr-md-0">
 
     <!-- Github -->
     <a href="https://github.com/pbauermeister/MathVue" target="_blank">
@@ -27,10 +26,9 @@
     </a>
 
     <h1>MathVue</h1>
-    This is the Processing.js version.
-    <a href="/webassembly">Go to the Webassembly version.</a><br/>
-    <small class="text-muted">
-      With Bootstrap v4, Vue.js v2.5, Processing v1.4, Node.js v8.
+    <small>Processing v1.4</small><small class="text-muted">,
+      Bootstrap v4, Vue.js v2.5, , Node.js v8.
+      <a href="/webassembly">Go to the Webassembly version.</a><br/>
     </small>
 
     <!-- Our Vue template -->
@@ -193,13 +191,15 @@
       </div>
       -->
 
-      <div class="p-5"></div>
       <!-- Discussion -->
+      <!--
+      <div class="p-5"></div>
       <div class="row pt-3">
         <div class="col-md-12">
 	  <Discussion></Discussion>
         </div>
       </div>
+      -->
 
     </div>
 
@@ -237,7 +237,9 @@
     <script src="/pjs/app.js"></script>
 
     <noscript>Please enable JavaScript for MathVue to work.</noscript>
+    <!--
     <script id="dsq-count-scr" src="//mathvue.disqus.com/count.js" async></script>
+    -->
 
   </body>
 </html>
