--- a/wasm/index.html
+++ b/wasm/index.html
@@ -5,13 +5,16 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 
+    <!-- Bootstrap CSS -->
     <link rel="stylesheet" href="/node_modules/bootstrap/dist/css/bootstrap.min.css">
     <link rel="stylesheet" href="/node_modules/bootstrap4-dialog/dist/css/bootstrap-dialog.min.css">
     <link rel="stylesheet" href="/node_modules/bootstrap-vue/dist/bootstrap-vue.css">
+
+    <!-- Font Awesome -->
     <link rel="stylesheet" href="/node_modules/@fortawesome/fontawesome-free/css/all.min.css">
 
     <link rel="stylesheet" href="/common/css/style.css">
-
+    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
   </head>
 
   <body class="p-md-3 p-1 mr-3 mr-md-0">
@@ -23,10 +26,10 @@
 	   alt="Fork me on GitHub">
     </a>
 
-    <h1>MathVue Webassembly</h1>
-    <small class="text-muted">
-      With Bootstrap v4, Vue.js v2.5, Node.js v8,
-      WebAssembly (Wasm), Enscripten (emcc).
+    <h1>MathVue</h1>
+    <small>WebAssembly</small><small class="text-muted"> (Wasm), Enscripten (emcc),
+      Bootstrap v4, Vue.js v2.5, Node.js v8.
+      <a href="/pjs">Go to the Processing.js version.</a><br/>
     </small>
 
     <div id="app" v-cloak>
