--- a/pjs/index.html
+++ b/pjs/index.html
@@ -28,7 +28,7 @@
     <h1>MathVue</h1>
     <small>Processing v1.4</small><small class="text-muted">,
       Bootstrap v4, Vue.js v2.5, , Node.js v8.
-      <a href="/webassembly">Go to the Webassembly version.</a><br/>
+      <a href="/webassembly">Go to the (new) Webassembly version.</a><br/>
     </small>
 
     <!-- Our Vue template -->
