Undo changes. This reverts commit 13701b230dc9518daee012b2510de4b36af1b16d.

--- a/wasm/index.html
+++ b/wasm/index.html
@@ -29,7 +29,7 @@
     <h1>MathVue</h1>
     <small>WebAssembly</small><small class="text-muted"> (Wasm), Enscripten (emcc),
       Bootstrap v4, Vue.js v2.5, Node.js v8.
-      <a href="/pjs">Go to the (old) Processing.js version.</a><br/>
+      <a href="/pjs">Go to the Processing.js version.</a><br/>
     </small>
 
     <div id="app" v-cloak>
