--- a/wasm/index.html
+++ b/wasm/index.html
@@ -29,7 +29,7 @@
     <h1>MathVue</h1>
     <small>WebAssembly</small><small class="text-muted"> (Wasm), Enscripten (emcc),
       Bootstrap v4, Vue.js v2.5, Node.js v8.
-      <a href="/pjs">Go to the Processing.js version.</a><br/>
+      <a href="/pjs">Go to the (old) Processing.js version.</a><br/>
     </small>
 
     <div id="app" v-cloak>
@@ -241,17 +241,16 @@
     <script src="/node_modules/jquery/dist/jquery.slim.min.js"></script>
     <script src="/node_modules/tether/dist/js/tether.min.js"></script>
     <script src="/node_modules/bootstrap/dist/js/bootstrap.min.js"></script>
+    <script src="/node_modules/bootstrap4-dialog/dist/js/bootstrap-dialog.min.js"></script>
 
     <script src="/node_modules/vue/dist/vue.min.js"></script>
     <script src="/node_modules/vue-router/dist/vue-router.min.js"></script>
     <script src="/node_modules/bootstrap-vue/dist/bootstrap-vue.min.js"></script>
-    <script src="/node_modules/bootstrap4-dialog/dist/js/bootstrap-dialog.min.js"></script>
 
     <script src="/node_modules/@fortawesome/fontawesome-free/js/all.min.js"></script>
 
     <script src="/node_modules/axios/dist/axios.min.js"></script>
     <script src="/node_modules/showdown/dist/showdown.min.js"></script>
-
     <!-- script src="https://rawgit.com/ajaxorg/ace-builds/master/src-min-noconflict/ace.js"></script -->
     <script src="/assets/ace/ace.js"></script>
 
