Wording and styling of tagline.

--- a/wasm/index.html
+++ b/wasm/index.html
@@ -26,11 +26,19 @@
 	   alt="Fork me on GitHub">
     </a>
 
-    <h1>MathVue</h1>
-    <small>WebAssembly</small><small class="text-muted"> (Wasm), Enscripten (emcc),
-      Bootstrap v4, Vue.js v2.5, Node.js v8.
-      <a href="/pjs">Go to the (old) Processing.js version.</a><br/>
-    </small>
+    <table><tr>
+	<td width="1%">
+	  <h1 class="m-0">MathVue</h1>
+	</td><td class="m-0 align-bottom">
+	  <div class="ml-2 mb-1">A web application to generate math pictures and animations.</div>
+	</td></tr>
+      <tr><td colspan="2" class="m-0">
+	  <small class="text-secondary">
+	    WebAssembly, Enscripten, Bootstrap v4, Vue.js v2.5, Node.js v8. &nbsp;
+	    <u><a href="/pjs" class="text-muted">Go to the (old) Processing.js version.</a></u>
+	  </small>
+      </td></tr>
+    </table>
 
     <div id="app" v-cloak>
 
