--- a/wasm/index.html
+++ b/wasm/index.html
@@ -15,6 +15,14 @@
 
     <link rel="stylesheet" href="/common/css/style.css">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+
+    <!-- favicon -->
+    <link rel="shortcut icon"
+          href="/common/img/favicon.png"
+          type="image/x-icon">
+    <link rel="icon"
+          href="/common/img/favicon.png"
+          type="image/x-icon">
   </head>
 
   <body class="p-md-3 p-1 mr-3 mr-md-0">
