--- a/wasm/index.html
+++ b/wasm/index.html
@@ -132,16 +132,24 @@
 		     class="pointer mr-1">
 		    <i class="fa fa-pause" aria-hidden="true"></i>
 		  </a>
+
 		  <a v-on:click="resume"
-		     v-show="!isLoading && !isRunning && !capturer"
+		     v-show="!isLoading && !isRunning && !capturer && !noAnimation"
 		     title="Resume"
 		     class="pointer mr-1">
 		    <i class="fa fa-play" aria-hidden="true"></i>
 		  </a>
+		  <a v-on:click="resume"
+		     v-show="!isLoading && !isRunning && !capturer && noAnimation"
+		     title="Step"
+		     class="pointer mr-1">
+		    <i class="fas fa-step-forward" aria-hidden="true"></i>
+		  </a>
+
 		</td>
 
 		<!-- Recording -->
-		<td v-if="isChrome"
+		<td v-if="isChrome && !noAnimation"
 		    class="canvas-controls">
 		  <!-- - button -->
 		  <button v-on:click="toggleRecording"
@@ -171,7 +179,7 @@
 		</td>
 	      </tr>
 
-	      <tr v-if="isChrome"
+	      <tr v-if="isChrome && !noAnimation"
 		  style="line-height: 1">
 		<td></td>
 		<!-- Recording params -->
