--- a/wasm/index.html
+++ b/wasm/index.html
@@ -231,7 +231,7 @@
       <StatusDialog ref="status_dialog"></StatusDialog>
 
       <!-- Gallery -->
-      <!-- TODO no link to dialog, bur list of thumbnails-->
+      <!-- TODO no link to dialog, but list of thumbnails -->
       <div class="row pt-3">
         <div class="col-md-12">
           <h2>Gallery</h2>
@@ -270,7 +270,6 @@
           </div>
         </div>
       </div>
-
 
 
       <!-- Discussion -->
