component_help styling (2 columns) and placement.

--- a/wasm/index.html
+++ b/wasm/index.html
@@ -70,9 +70,7 @@
 		    rows="5">
 	  </textarea>
 
-	  <!-- Help Panel -->
-	  <Help markdown_path="/wasm/help.md" class="mt-1"></Help>
-
+	  <!-- Main Buttons -->
 	  <div>
 	    <button class="btn btn-sm btn-primary"
 		    v-on:click="run">Compile and Run</button>
@@ -91,7 +89,7 @@
           </div>
 
 	  <!-- Help Panel -->
-	  <!-- Help markdown_path="/wasm/help.md"></Help -->
+	  <Help markdown_path="/wasm/help.md" class="mt-1"></Help>
 
 	</div>
 
