Save formula: suggest file name from "// File: " comment; sync comment with effective file name.

--- a/wasm/index.html
+++ b/wasm/index.html
@@ -301,6 +301,7 @@
     <!-- Dropbox -->
     <script src="/common/js/dropbox_storage.js"></script>
     <script src="/common/js/dropbox_manager.js"></script>
+    <script src="/common/js/comment_header.js"></script>
 
     <!-- Our app's code -->
     <script src="/common/js/file_dialog.js"></script>
