Add the debug_value variable.

--- a/wasm/index.html
+++ b/wasm/index.html
@@ -213,6 +213,12 @@
 		  </span>
 		</td>
 	      </tr>
+	      <tr>
+		<td></td>
+		<td colspan="2">
+		  <span class="font-controls"> Debug value: {{ debugValue }} </span>
+		</td>
+	      </tr>
 	    </table>
 	  </div>
 
