Debug value layout adjustment.

--- a/wasm/index.html
+++ b/wasm/index.html
@@ -213,13 +213,11 @@
 		  </span>
 		</td>
 	      </tr>
-	      <tr>
-		<td></td>
-		<td colspan="2">
-		  <span class="font-controls"> Debug value: {{ debugValue }} </span>
-		</td>
-	      </tr>
 	    </table>
+	    <span class="font-controls">
+	      Debug value:
+	      <span class="font-controls text-secondary"> {{ debugValue }} </span>
+	    </span>
 	  </div>
 
 	  <div v-if="!isChrome">
